Notification bug fixes and enhancements add linkedUsers action target